projects/core/components/dialog/dialogs.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

:host {
    .fullsize(fixed);
    .scrollbar-hidden();

    pointer-events: none;
    overflow: hidden;
    overscroll-behavior: none;
    transform: translateY(var(--t-root-top));

    &:has(section) {
        pointer-events: auto;
        overflow: auto;
    }

    &::before {
        content: '';
        display: block;
        block-size: 1000%;
    }
}

.t-overlay,
.t-dialog {
    .transition(filter);
    .scrollbar-hidden();
    .fullsize(fixed, inset);

    display: flex;
    block-size: 100%;
    align-items: flex-start;
    outline: none;
    overflow: auto;

    &.ng-animating {
        overflow: clip;
    }
}

.t-dialog {
    position: sticky;
    overscroll-behavior: none;
    filter: brightness(0.25);
}

.t-overlay {
    .transition(opacity);

    background: var(--tui-service-backdrop);
    backdrop-filter: var(--tui-backdrop, none);
    opacity: 0;
    transition-timing-function: ease-in;

    &_visible {
        opacity: 1;
        transition-timing-function: ease-out;
    }
}

.t-dialog:last-child {
    pointer-events: auto;
    filter: none;

    :host-context(tui-root:has(tui-dropdown-mobile._sheet)) & {
        filter: brightness(0.5);
    }
}

.t-scrollbars {
    .fullsize(fixed, inset);

    margin: 0;
    color: #747474;
}

